# foundry

./: Cargo.toml
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/cmd/: bind.rs  mod.rs  test.rs
cli/tests/: cmd.rs
forge/: Cargo.toml
forge/src/: lib.rs  multi_runner.rs  runner.rs
forge/src/executor/: builder.rs  mod.rs
forge/src/executor/fuzz/: mod.rs
forge/src/executor/inspector/: logs.rs  stack.rs
