[workspace]
members = [
    "utils",
    "cast",
    "forge",
    "cli",
    "cli/test-utils",
    "config",
    "fmt",
]

# Binary size optimizations
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = true

# HACK: Patch for ethabi until primitive-types is updated.
#
# Needs updates in ethabi, and then ethers-rs, and then foundry.
#
# See: https://github.com/rust-ethereum/ethabi/pull/262
[patch."https://github.com/rust-ethereum/ethabi"]
ethabi = { git = "https://github.com/jeffreybolle/ethabi", branch = "master", default-features = false, features = ["full-serde", "rlp"] }

## Patch ethers-rs with a local checkout
#[patch."https://github.com/gakonst/ethers-rs"]
#ethers = { path = "../ethers-rs" }
#ethers-core = { path = "../ethers-rs/ethers-core" }
#ethers-providers = { path = "../ethers-rs/ethers-providers" }
#ethers-signers = { path = "../ethers-rs/ethers-signers" }
#ethers-etherscan = { path = "../ethers-rs/ethers-etherscan" }
#ethers-solc = { path = "../ethers-rs/ethers-solc" }
